--- a/CapstonProjectBE/appsettings.json
+++ b/CapstonProjectBE/appsettings.json
@@ -29,5 +29,6 @@
     "ApiKey": "454314218959622",
     "ApiSecret": "nZ8lRmgAHnX8CdJIwCxxavigYOE"
   },
+  "ExchangeRateApiKey": "032aeb38f7e1407dc35a3106",
   "AllowedHosts": "*"
 }
