--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,7 +1,10 @@
 name: Build and Publish image to Docker Hub
 
 on:
-  [workflow_dispatch]
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
   publish_images:
