--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Build and Publish image to Docker Hub
+name: Build and Publish image to Docker Hub and deploy to railway
 
 on:
   push:
@@ -30,3 +30,23 @@ jobs:
         
       - name: push image to docker hub
         run: docker push trungthong/capstonebe:latest
+
+      - name: Cache Railway CLI
+        uses: actions/cache@v3
+        with:
+          path: ~/.railway
+          key: ${{ runner.os }}-railway-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-railway-
+
+      - name: Install Railway CLI
+        run: curl -fsSL https://cli.railway.app/install.sh | sh
+        if: steps.cache.outputs.cache-hit != 'true'
+
+      - name: Authenticate to Railway
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+        run: railway login --token $RAILWAY_TOKEN
+
+      - name: Deploy to Railway
+        run: railway up
