--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          
+
       - name: Build Docker image
         run: docker build -t capstoneprojectbedocker:latest -f Dockerfile .
 
@@ -40,8 +40,11 @@ jobs:
             ${{ runner.os }}-railway-
 
       - name: Install Railway CLI
-        run: curl -fsSL https://cli.railway.app/install.sh | sh
-        if: steps.cache.outputs.cache-hit != 'true'
+        run: |
+          if ! command -v railway &> /dev/null || [[ "$(railway --version)" != "$(curl -sSL https://cli.railway.app/version)" ]]; then
+            curl -fsSL https://cli.railway.app/install.sh | sh
+            echo "$HOME/.railway/bin" >> $GITHUB_PATH
+          fi
 
       - name: Authenticate to Railway
         env:
