--- a/CapstonProjectBE/CapstonProjectBE.csproj
+++ b/CapstonProjectBE/CapstonProjectBE.csproj
@@ -11,6 +11,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\FreeSans.ttf" />
+    <None Remove="Resources\sRGB_CS_profile.icm" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\FreeSans.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\sRGB_CS_profile.icm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.20" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.20">
