--- a/CapstonProjectBE/appsettings.json
+++ b/CapstonProjectBE/appsettings.json
@@ -20,8 +20,8 @@
     "CallbackUrl": "https://localhost:50875/api/Payment/Callback"
   },
   "PayPal": {
-    "ClientId": "ASIHWjrKk4OYSZCYDg5_r1E1BeD70icL7Y0Al-otKqHscN2jh5Q5-PiXV8phj9KnSHZdcB-BDdDAM7w4",
-    "ClientSecret": "EOEeLU8BzCZoKbTmn4nxKnbHuwhxhe8rdUTYhU0JIOn3QUyMmz1W942nQ-bnS_mMIzyY30VjbzAGhuqj",
+    "ClientId": ${{ secrets.PAYPAL_CLIENT_ID }},
+    "ClientSecret": ${{ secrets.PAYPAL_CLIENT_SECRET }},
     "Mode": "sandbox"
   },
   "Cloudinary": {
